--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,25 @@
 <resources>
     <string name="app_name">MyCar</string>
-    <string name="title_activity_main">MainActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="car_name">Vehicle name</string>
+    <string name="car_brand">Brand</string>
+    <string name="car_model">Model</string>
+    <string name="registration_number">Registration number</string>
+    <string name="vin_number">VIN number</string>
+    <string name="fuel_capacity">Fuel Capacity</string>
+    <string name="notes">Notes</string>
+    <string name="title_activity_new_vehicle">New Vehicle</string>
+    <string name="action_save">Save</string>
+    <string name="title_activity_new_service">New Service</string>
+    <string name="title_activity_new_expense">New Expense</string>
+    <string name="title_activity_new_reminder">New Reminder</string>
+    <string name="title_activity_new_refueling">New Refueling</string>
+    <string name="title_activity_new_insurance">New Insurance</string>
 </resources>
