Better datepicker + change ViewVehicleActivity UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,4 +186,5 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="quantity">Quantity</string>
+    <string name="select_color">Select color:</string>
 </resources>
