--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,8 +88,11 @@
     <string name="capacity_placeholder">Capacity: %d</string>
     <string name="consumption_placeholder">Consumption: %.1f</string>
     <string name="title_activity_view_vehicle">ViewVehicleActivity</string>
-    <string name="change_placeholder">Change %s</string>
-    <string name="current_odometer_placeholder">Current odometer: %d</string>
+    <string name="price_placeholder">Price: <b>%s</b></string>
+    <string name="fuel_price_placeholder">Fuel price: <b>%s</b></string>
+    <string name="date_placeholder">Date: %s</string>
+    <string name="expiration_date_placeholder">Expiration date: <b>%s</b></string>
+    <string name="current_odometer_placeholder">Current odometer: <b>%d</b></string>
 
     <string name="delete">Delete</string>
     <string name="open">Open</string>
@@ -107,4 +110,5 @@
     <string name="by_odometer">By odometer</string>
     <string name="target_odometer">Target odometer</string>
     <string name="notification_time">Target time</string>
+    <string name="new_company">New company</string>
 </resources>
